errors-fixed
forgot to close link tags
able to add hover after the fact
added a 'hr' just because
fixed the problem of off center video

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ ul {
 a {
   color: black;
 }
+a:hover {
+  color: rgba(0, 0, 0, 0.5);
+}
 li {
   display: inline;
   padding: 0px 100px 0px 100px;
@@ -40,11 +43,9 @@ body {
 main {
   padding-left: 100px;
   padding-right: 100px;
-  <!-- when site is minimized video is off
-  center -->
 }
 iframe {
-  width: 640px;
+  width: 100%;
   height: 360px;
   border: 0;
 }
@@ -64,5 +65,6 @@ input[type="submit"] {
   background-image: linear-gradient(to right,
      #5165c3, #c351af);
   color: white;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 }
